infrastructure/gitops/components/seaweedfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs
spec:
  selector:
    app.kubernetes.io/name: seaweedfs
  ports:
    - name: s3
      port: 8333
      targetPort: s3
